// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading renderer should render H tag 1`] = `
<h1
  class=""
  id="heading"
>
  <a
    aria-hidden="true"
    href="#heading"
  >
    #
  </a>
  Heading
</h1>
`;

exports[`Heading should render h{n} tag with anchor link inside 1`] = `
<h1
  class="heading-2948884764"
  id="h1"
>
  <a
    aria-hidden="true"
    class="anchor-3977085326"
    href="#h1"
  >
    #
  </a>
  H1
</h1>
`;

exports[`Heading should render h{n} tag with anchor link inside 2`] = `
<h2
  class="heading-2948884764"
  id="h2"
>
  <a
    aria-hidden="true"
    class="anchor-3977085326"
    href="#h2"
  >
    #
  </a>
  H2
</h2>
`;

exports[`Heading should render h{n} tag with anchor link inside 3`] = `
<h3
  class="heading-2948884764"
  id="h3"
>
  <a
    aria-hidden="true"
    class="anchor-3977085326"
    href="#h3"
  >
    #
  </a>
  H3
</h3>
`;

exports[`Heading should render h{n} tag with anchor link inside 4`] = `
<h4
  class="heading-2948884764"
  id="h4"
>
  <a
    aria-hidden="true"
    class="anchor-3977085326"
    href="#h4"
  >
    #
  </a>
  H4
</h4>
`;

exports[`Heading should render h{n} tag with anchor link inside 5`] = `
<h5
  class="heading-2948884764"
  id="h5"
>
  <a
    aria-hidden="true"
    class="anchor-3977085326"
    href="#h5"
  >
    #
  </a>
  H5
</h5>
`;

exports[`Heading should render h{n} tag with anchor link inside 6`] = `
<h6
  class="heading-2948884764"
  id="h6"
>
  <a
    aria-hidden="true"
    class="anchor-3977085326"
    href="#h6"
  >
    #
  </a>
  H6
</h6>
`;
